# py-mahi-gui

./: .appveyor.yml  .clang-format  .drone.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build-wheels.sh  push-wheels.sh  setup.py
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst  mahi_gui.rst  make.bat
examples/: drag_drop.py  hello_world.py  plots_benchmark.py  ratcave_scene.py
src/: imgui.cpp  imgui_custom.cpp  imgui_helper.h  implot.cpp  leaked_ptr.h  mahi-gui.cpp  mahi_gui.cpp  module.cpp  pybind-cast.hpp  pybind_cast.hpp
tests/: test.py  test_base.py
